--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,173 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .lista_img{
-    width: 70px;
+    width: 80px;
     border-radius: 70px;
 }
 .mostrar_img{
     width: 250px;
+}
+body{
+    font-family: Montserrat,Arial, Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    overflow-x: hidden;
+}
+header{
+    height: 100px;
+    background-color: #b3d9ff;
+    color: #fff;
+}
+.header{
+    max-width: 1140px;
+    height: 100px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+.logo{
+    width: 100px;
+}
+.logoimg img{
+    width: 100px;
+    height: 80px;
+
+}
+.menu-opener{
+    display: none;
+}
+.menu{
+ flex: 1;
+ display: flex;
+ justify-content: flex-end;
+}
+.menu ul,
+.menu li{
+   list-style: none;
+}
+.menu ul{
+    display: flex;
+}
+.menu li a{
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    border-bottom: 5px solid #b3d9ff;
+}
+.menu li a:hover,
+.menu .active a{
+    border-bottom: 5px solid #D8AF21;
+    color: #D8AF21;
+}
+
+.button{
+    display: inline-block;
+    background-color: #B28756;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+
+.banner{
+    height:calc(86.5vh);
+    background-color: #F6F3EA;
+    background-image: url('../logo/6eacc63d-46b9-4a6c-ae9b-fdb9579be941.png');
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+.banner-pes{
+    background-color: #000;
+}
+.banner .sliders{
+    width: 1000vw;
+    height:100% ;
+}
+.banner .slide{
+    width: 100vw;
+    height: 100%;
+    display: inline-block;
+}
+.banner .slidearea{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+}
+.banner h1{
+   text-transform: uppercase;
+   font-weight: bold;
+   font-size: 50px; 
+}
+.banner h1 span{
+    color: #B28756;
+}
+.banner h2{
+    text-transform: uppercase;
+    margin-top: 20px;
+}
+.banner .sliders-pointers{
+    width: 100vw;
+    height: 20px;
+    position: absolute;
+    margin-top: -50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner .pointer.active{
+background-color: #B28756;
+}
+.default{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.default .section-title,
+.default .section-desc{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.default .section-title{
+    font-size: 20px;
+}
+.default .section-desc{
+    font-size: 12px;
+    color: #CCC;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+.default .section-body{
+    max-width: 1140px;
+    margin: auto;
+}
+.default.light {
+    background-color: #f7f7f7;
+}
+.default.light .section-title,
+.default.light .section-body{
+    color: #000;
+}
+.default.dark{
+    background-color: #000;
+}
+.default.dark .section-title,
+.default.dark .section-body{
+    color: #FFF;
 }
