--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,7 +51,7 @@ header{
     display: flex;
 }
 .menu li a{
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
     font-weight: 600;
     text-decoration: none;
